# tst_fltk

./: .gitignore  CMakeLists.txt  main.cpp  test_fltk
inc/: cb_item.h  item_.h  item_menu.h  main_window.h  modal_window.h
lib/: CMakeLists.txt
lib/inc/: base_graph.h  base_gui.h  base_item.h  fl_widgets.h  gui_attributes.h  item_.h  m_list2.h  m_tuple.h  menu_.h  point.h  simple_item.h  tst_item.h  window.h
lib/inc/math/: m_heap.h  m_heap.hpp  math_primitives.h  t_rb_tree.h  u_item.h
lib/src/: base_graph.cpp  base_gui.cpp  fl_widgets.cpp  menu_.cpp  window.cpp
src/: item_menu.cpp  main_window.cpp  modal_window.cpp
